# shm_lib

./: CMakeLists.txt  shared_mem_mutex.cpp  shared_mem_mutex.h  shm_array.cpp  shm_array.h
test/: creator.cpp  destroyer.cpp  first_hand.cpp  second_hand.cpp
